--- a/Invoices/SAPUI5/webapp/view/App.view.xml
+++ b/Invoices/SAPUI5/webapp/view/App.view.xml
@@ -7,16 +7,14 @@
         <App >
             <pages>
                 <Page title="{i18n>appTitle}">
+                    <headerContent>
+                        <Button id="helloDialogheader" 
+                            icon="sap-icon://action" 
+                            press=".onOpenDialogHeader" 
+                            class="sapUiSmallMarginEnd"></Button>
+                    </headerContent>
                     <content>
-                        <Panel headerText="{i18n>helloPanel}" class="sapUiResponsiveMargin" width="auto">
-                            <content>
-                                <Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="sapUiSmallMarginEnd"></Button>
-                                <Input value="{/recipient/name}" 
-                                    valueLiveUpdate="true"
-                                    width="60%"></Input>
-                                <Text text="Hello {/recipient/name}" class="sapUiSmallMargin boldElements sapThemeHighlight-asColor"/>
-                            </content>   
-                        </Panel>        
+                        <mvc:XMLView viewName="logaligroup.SAPUI5.view.HelloPanel"/>
                     </content>        
                 </Page>    
             </pages>    
