--- a/Invoices/SAPUI5/webapp/view/InvoicesList.view.xml
+++ b/Invoices/SAPUI5/webapp/view/InvoicesList.view.xml
@@ -6,7 +6,7 @@
           headerText="{i18n>invoiceListTitle}" 
           class="sapUiResponsiveMargin" 
           width="auto" 
-          items="{ path: 'invoices>/Invoices', 
+          items="{ path: 'northwind>/Invoices', 
                    sorter: { path : 'ShipperName',
                              group : true } 
                  }">
@@ -18,19 +18,15 @@
             </Toolbar>
         </headerToolbar>  
         <items>
-            <ObjectListItem title="{invoices>Quantity} x {invoices>ProductName}"
-                            number="{ parts : [ { path: 'invoices>ExtendedPrice'},
+            <ObjectListItem title="{northwind>Quantity} x {northwind>ProductName}"
+                            number="{ parts : [ { path: 'northwind>ExtendedPrice'},
                                                 { path: 'currency>/eur'}],
                                       type : 'sap.ui.model.type.Currency',
                                       formatOptions: {
                                          showMeasure : false }
                                     }"
                             numberUnit="{currency>/usd}" 
-                            numberState="{= ${invoices>ExtendedPrice} > 50 ? 'Success' : 'Error'}">
-                <firstStatus>
-                    <ObjectStatus text="{ path : 'invoices>Status',
-                                          formatter: '.formatter.invoiceStatus'}"></ObjectStatus>
-                </firstStatus>
+                            numberState="{= ${northwind>ExtendedPrice} > 50 ? 'Success' : 'Error'}">
             </ObjectListItem>                
         </items>
     </List>
