--- a/Invoices/SAPUI5/webapp/view/HelloPanel.view.xml
+++ b/Invoices/SAPUI5/webapp/view/HelloPanel.view.xml
@@ -6,7 +6,7 @@
 
         <Panel headerText="{i18n>helloPanel}" class="sapUiResponsiveMargin" width="auto">
             <content>
-                <Button id="helloDialogBurron" 
+                <Button id="helloDialogButton" 
                         icon="sap-icon://action" 
                         text="{i18n>helloDialogBut}" 
                         press=".onOpenDialog" 
