--- a/Invoices/SAPUI5/webapp/view/Details.view.xml
+++ b/Invoices/SAPUI5/webapp/view/Details.view.xml
@@ -1,6 +1,8 @@
 <mvc:View controllerName="logaligroup.SAPUI5.controller.Details"
           xmlns="sap.m"
           xmlns:mvc="sap.ui.core.mvc"
+          xmlns:core="sap.ui.core"
+          xmlns:logali="logaligroup.SAPUI5.control"
           displayBlock="true">
 
         <Page title="{i18n>detailsPageTitle}" showNavButton="true" navButtonPress=".onNavBack">
@@ -16,5 +18,6 @@
                     <ObjectAttribute text="{northwind>CustomerName}"/>
                 </attributes>
             </ObjectHeader>
+            <logali:ProductRating id="rating" class="sapUiSmallMarginBeginEnd" change=".onRatingChange"/>
         </Page>   
 </mvc:View>
